--- a/mba_fiap_react_native_final/app.json
+++ b/mba_fiap_react_native_final/app.json
@@ -5,6 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "entryPoint": "./Routes/RouteController",
     "jsEngine": "hermes",
     "userInterfaceStyle": "light",
     "splash": {
