--- a/mba_fiap_react_native_final/package.json
+++ b/mba_fiap_react_native_final/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
@@ -41,6 +42,7 @@
     "@types/react-native": "~0.70.6",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.1",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.6.3"
   },
   "private": true
