--- a/mba_fiap_react_native_final/package.json
+++ b/mba_fiap_react_native_final/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.70.5",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-paper": "^5.1.3",
     "react-native-permissions": "^3.6.1",
     "react-native-reanimated": "~2.12.0",
@@ -37,6 +38,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
+    "uuid": "^9.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
