--- a/mba_fiap_react_native_final/package.json
+++ b/mba_fiap_react_native_final/package.json
@@ -27,6 +27,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-maps": "^1.4.0",
     "react-native-paper": "^5.1.3",
     "react-native-permissions": "^3.6.1",
     "react-native-reanimated": "~2.12.0",
