ajustes finais - entrega

--- a/mba_fiap_react_native_final/app.json
+++ b/mba_fiap_react_native_final/app.json
@@ -17,13 +17,17 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.fiap.mba_fiap_react_native_final",
+      "buildNumber": "1.0.0"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.fiap.mba_fiap_react_native_final",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
